# pulseox-firmware

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RELEASE_NOTES_V2-2.md  platformio.ini
calibration/: method.md
cmake/toolchains/: arm-none-eabi.cmake
experiments/: Data experiments.ipynb  data-clip-finger-ir-red-led.txt  data-clip-w15-finger-ir-led.txt  data-clip-w30-finger-ir-led.txt  data-finger-covered-no-led.txt  data-finger-ir-led.txt  sample-data-3.txt
ld/: README.md  stm32f030f4p6.ld  stm32f070f6p6.ld
src/: CMakeLists.txt  adc.c  adc.h  battery.c  battery.h  clock.c  clock.h  dsp.c  dsp.h  font.c  gfx.c  gfx.h  gui.c  gui.h  lcd.c  lcd.h  main.c  main.cpp  measurement.c  measurement.h  spo2.h  uart.c  uart.h
src/qfplib/: qfplib.h  qfplib.s
